spruced-up-newsies

--- a/color-grid-from-scratch/styles.css
+++ b/color-grid-from-scratch/styles.css
@@ -7,6 +7,10 @@ body {
     margin-top: 100px;
     max-width: 880px;
 }
+
+p {
+    display: inline-block;
+}
 .rose {
     margin: 10px;
     height: 115px;
