--- a/HTML Calculator/styles.css
+++ b/HTML Calculator/styles.css
@@ -1,3 +1,55 @@
+html, body {
+    height: 100%;
+}
+html {
+    display: table;
+    margin: auto;
+}
+body {
+    background-color: cornsilk;
+    display: table-cell;
+    vertical-align: middle;
+}
 #display {
-    
+    font-size: 25px;
+    border-radius: 2px;
+}
+.addRow {
+    margin: 9px;
+    padding: 10px;
+    background-color: honeydew;
+    color: darkgreen;
+    font-size: 20px;
+    width: 70px;
+    height: 50px;
+}
+.multiRow {
+    margin: 9px;
+    padding: 10px;
+    background-color: lavender;
+    color: indigo;
+    font-size: 20px;
+    width: 70px;
+    height: 50px;
+}
+.diviRow {
+    margin: 9px;
+    padding: 10px;
+    background-color: lightskyblue;
+    color: navy;
+    font-size: 20px;
+    width: 70px;
+    height: 50px;
+}
+button {
+    padding: 15px;
+    font-size: 30px;
+    color: indigo
+    border-radius: 2px;
+    background-color: black, transparent;
+    opacity: .5;
+    }
+button:hover {
+    opacity: 1;
+    cursor: pointer;
 }
