--- a/Mario-Pest-Control/styles.css
+++ b/Mario-Pest-Control/styles.css
@@ -6,6 +6,29 @@
     margin: auto;
     height: 302px;
     width: 750px;
+    background-image: url("Donkey-Kong-Country.jpeg");
+    background-size: 750px 302px;
+    border-radius: 1px;
+
+}
+#start{
+    margin: auto;
+    font-size: 40px;
+    font-family: Impact, fantasy;
+    position: relative;
+    left: 290px;
+    top: 200px;
+    background-color: #dd5313;
+    color: black;
+    border: black 30px;
+    border-radius: 2px;
+}
+#start:hover {
+        cursor: text;
+        opacity: 1;
+        cursor: pointer;
+        border-color: #995c00;
+}
 }
 #dkImg {
     width: 100%;
@@ -17,22 +40,37 @@
 }
 body {
     width: 100%;
-    height: 1000px;
+    height: 650px;
     background-color: grey;
 }
 .dkBlock {
     margin: auto;
     width: 750px;
     height: 100%;
-    background-color: whitesmoke;
+    background-color: rgba(36, 107, 48, 0.329);
 }
-#kritter {
+.characterDiv {
+    margin: 15px;
+    width: 100%;
+}
+.dkImg {
+    display: inline-block;
     margin: auto;
-    width: 105px;
-    height: 105px;
+    width: 135px;
+    height: 135px
 }
 .dkInput {
     margin: auto;
-    font-size: 20px;
-    
+    width: 40px;
+    font-size: 30px;
+    opacity: 0.5;
+    color: #ccffde;
+    border-color: #006622;
+}
+.divChild {
+    margin: auto;
+    display: inline-block;
+}
+h1 {
+    font-size: 25px;
 }
