--- a/Mario-Pest-Control/styles.css
+++ b/Mario-Pest-Control/styles.css
@@ -9,7 +9,26 @@
     background-image: url("Donkey-Kong-Country.jpeg");
     background-size: 750px 302px;
     border-radius: 1px;
-
+}
+.dkTitle {
+    margin: auto;
+    font-size: 50px;
+    font-weight: bold;
+    text-align: center;
+    position: relative; 
+}
+#donkeyTitle {
+    width: 190px;
+    height: 40%;
+    left: -250px;
+    top: 30px;
+    background-color: #dd5313;
+}
+#pestTitle {
+    width: 190px;
+    padding: 2px;
+    left: 200px;
+    top: 5px;
 }
 #start{
     margin: auto;
@@ -17,30 +36,29 @@
     font-family: Impact, fantasy;
     position: relative;
     left: 290px;
-    top: 200px;
+    top: -40px;
     background-color: #dd5313;
     color: black;
-    border: black 30px;
+    border: black;
+    opacity: .8;
     border-radius: 2px;
 }
 #start:hover {
-        cursor: text;
-        opacity: 1;
-        cursor: pointer;
-        border-color: #995c00;
+    cursor: text;
+    opacity: 1;
+    cursor: pointer;
+    border-color: black;
 }
-}
-#dkImg {
-    width: 100%;
-    height: 300px;
+.dkImg {
+    width: 110px;
+    height: 110px;
     background-size: cover;
-    border: 1px solid rgb(26, 13, 13);
     background-position: center;
     display: inline-block;
 }
 body {
     width: 100%;
-    height: 650px;
+    height: 540px;
     background-color: grey;
 }
 .dkBlock {
@@ -49,16 +67,24 @@ body {
     height: 100%;
     background-color: rgba(36, 107, 48, 0.329);
 }
+#spinBanana {
+    margin: auto;
+    display: inline-block;
+    position: relative;
+    left: 100px;
+    width: 25px;
+    height: 45px;
+}
 .characterDiv {
     margin: 15px;
     width: 100%;
 }
-.dkImg {
+/* .dkImg {
     display: inline-block;
     margin: auto;
     width: 135px;
     height: 135px
-}
+} */
 .dkInput {
     margin: auto;
     width: 40px;
