--- a/Mario-Pest-Control/styles.css
+++ b/Mario-Pest-Control/styles.css
@@ -12,32 +12,34 @@
 }
 .dkTitle {
     margin: auto;
-    font-size: 50px;
-    font-weight: bold;
+    padding: 10px;
+    font-size: 40px;
+    color: #f05a15;
+    font-weight: bold; 
     text-align: center;
     position: relative; 
 }
 #donkeyTitle {
-    width: 190px;
-    height: 40%;
-    left: -250px;
-    top: 30px;
-    background-color: #dd5313;
+    width: 320px;
+    height: 73px;
+    left: -215px;
+    top: 0px;
+    background-color: #01521c;
 }
 #pestTitle {
     width: 190px;
     padding: 2px;
-    left: 200px;
-    top: 5px;
+    left: 280px;
+    top: -70px;
 }
-#start{
+#start {
     margin: auto;
     font-size: 40px;
     font-family: Impact, fantasy;
     position: relative;
-    left: 290px;
-    top: -40px;
-    background-color: #dd5313;
+    left: 320px;
+    top: 65px;
+    background-color: #f05a15;
     color: black;
     border: black;
     opacity: .8;
@@ -58,13 +60,13 @@
 }
 body {
     width: 100%;
-    height: 540px;
+    height: 500px;
     background-color: grey;
 }
 .dkBlock {
     margin: auto;
     width: 750px;
-    height: 100%;
+    height: 80%;
     background-color: rgba(36, 107, 48, 0.329);
 }
 #spinBanana {
@@ -72,7 +74,7 @@ body {
     display: inline-block;
     position: relative;
     left: 100px;
-    width: 25px;
+    width: 20px;
     height: 45px;
 }
 .characterDiv {
@@ -99,4 +101,13 @@ body {
 }
 h1 {
     font-size: 25px;
+}
+#dkFooter {
+    margin: auto;
+    width: 750px;
+    height: 20%;
+    font-size: 20px;
+    color: rgba(226, 151, 11, 0.959);
+    text-align: center;
+    background-color: #05642c8e
 }
