--- a/Mario-Pest-Control/styles.css
+++ b/Mario-Pest-Control/styles.css
@@ -87,8 +87,9 @@ body {
     height: 75px;
     display: inline-block;
     position: absolute;
-    left: 740px;
-    top: 335px;
+    right: 4px;
+    top: px;
+    top: 7px;
     text-align: center;
     font-size: 30px;
     border-radius: 20px;
@@ -127,8 +128,8 @@ h1 {
     height: 40px;
     display: inline-block;
     position: absolute;
-    left: 750px;
-    top: 460px;
+    right: 107px;
+    top: 90px;
     text-align: center;
     font-size: 25px;
     border-radius: 7px;
