--- a/travel-form/styles.css
+++ b/travel-form/styles.css
@@ -1,5 +1,29 @@
 body {
+    background: url("moon-airlines.jpg") center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+.divOne {
+    margin: auto;
+    width: 310px;
+    height: 483px;
+    position: relative;
+    right: 505px;
+    top: 172px;
+    background-color: #385264;
+    opacity: .2;
+    border-radius: 3px;
+}
+#application {
     width: 100%;
-    background: url("Moon-Vacation.jpeg");
-    background-size: 100%;
+    height: 100%;
+  
+}
+.personalInfo {   
+    margin: 25px;
+    width: 80%;
+    height: 33px;
+    font-size: 30px;
+    position: relative;
 }
