--- a/travel-form/styles.css
+++ b/travel-form/styles.css
@@ -11,19 +11,41 @@ body {
     position: relative;
     right: 505px;
     top: 172px;
-    background-color: #385264;
-    opacity: .2;
-    border-radius: 3px;
 }
 #application {
     width: 100%;
     height: 100%;
-  
+    background-color: #385264;
+    border-radius: 3px;
+    opacity: .6;  
 }
-.personalInfo {   
+.personalInfo {
     margin: 25px;
     width: 80%;
     height: 33px;
     font-size: 30px;
     position: relative;
+    border-radius: 2px;
+}
+#age {
+    width: 80px;
+}
+#gender {
+    font-size: 5px;
+    margin: 24px;
+    top: -133px;
+    left: 62px;
+    position: relative;
+}
+#genderHeader {
+    font-size: 26px;
+    padding: 5px;
+    /* background-color: brown; */
+    color: whitesmoke;
+    width: auto;
+    position: relative;
+    top: -170px;
+    left: 172px;
+    display: inline-block;
+    border-radius: 2px;
 }
