--- a/travel-form/styles.css
+++ b/travel-form/styles.css
@@ -37,7 +37,7 @@ body {
 #age {
     width: 80px;
 }
-#gender {
+#genderMale, #genderFemale {
     font-size: 5px;
     margin: 24px;
     top: -117px;
