--- a/business-time/styles.css
+++ b/business-time/styles.css
@@ -1,57 +1,54 @@
 * {
     box-sizing: border-box;
-  }
-body {
-    width: 100%;
-    background:url("amplifier-audio-mixer-close-up-1436141.jpg") no-repeat;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
- #headerDiv {
+#bodId {
+    font-family: Verdana;
+    color: #aaaaaa;
+}
+#divHeader {
+    background-color: #e5e5e5;
+    padding: 15px;
     text-align: center;
-    background-color: cornsilk;
- } 
- #divWrap {
-    height: 80%;
+}
+#container {
     overflow: auto;
-    background-color: rgb(182, 165, 206);
-    opacity: 0.8;
- }
-.menu {
-    float:left;
-    width:20%;
-    text-align:center;
-  }
-#mic {
-    background-color:#e5e5e5;
-    padding:8px;
-    margin-top:7px;
-    display:block;
-    color:black;
-    opacity: 1.0;
-  }
-  .main {
-    float:left;
-    width:60%;
-    padding:0 20px;
-  }
-  .right {
-    background-color:#e5e5e5;
-    float:left;
-    width:20%;
-    padding:15px;
-    margin-top:7px;
-    text-align:center;
-  }
-  #footDiv {
-    text-align:center;
-    padding:10px;
-    margin-top:7px;
-    opacity: 1;
-  }
-/* Mobile Style */
-  @media only screen and (max-width:620px) {
+}
+.menu {   
+    float: left;
+    width: 20%;
+    text-align: center;
+}
+.menu a {
+    background-color: #e5e5e5;
+    padding: 8px;
+    margin-top: 7px;
+    display: block;
+    width: 100%;
+    color :black;
+}
+.main {
+    float: left;
+    width: 60%;
+    padding: 0 20px;
+}
+.right {
+    background-color: #e5e5e5;
+    float: left;
+    width: 20%;
+    padding: 15px;
+    margin-top: 7px;
+    text-align: center;
+}
+#footer{
+    background-color: #e5e5e5;
+    text-align: center;
+    padding: 10px;
+    margin-top: 7px;
+}
+
+@media only screen and (max-width:620px) {
+    /* For mobile phones: */
     .menu, .main, .right {
-      width:100%;
+    width: 100%;
     }
-  }
+}
