--- a/travel-form/styles.css
+++ b/travel-form/styles.css
@@ -1,4 +1,7 @@
 body {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
     background: url("moon-airlines.jpg") center center;
     background-size: cover;
     background-repeat: no-repeat;
