--- a/business-time-2/styles.css
+++ b/business-time-2/styles.css
@@ -36,6 +36,7 @@ body {
 .navBar a {
     display: inline-block;
     text-decoration: none;
+    font-family: 'Staatliches', cursive;
     padding: 15px;
     color: antiquewhite;
     background-color: rgba(0, 0, 0, 0.322);
@@ -50,10 +51,19 @@ body {
 /* HEADERS */
 .firstHeader {
     grid-area: fh;
+    font-size: 2.8em;
+    font-family: 'Righteous', cursive;
+    text-align: center;
+}
+.firstHeaderB {
+    grid-area: fh;
+    font-size: 3em;
+    font-family: 'Righteous', cursive;
     text-align: center;
 }
 .secondHeader {
     grid-area: sh;
+    font-family: 'Staatliches', cursive;
     padding: 14px;
     text-align: center;
     border-top: 4px solid #133233;
@@ -72,6 +82,7 @@ body {
 
 /* IMAGES AND LINKS */
 .clickPic {
+    font-family: 'Staatliches', cursive;
     text-decoration: none;
     color: blanchedalmond;
     opacity: 1;
