--- a/CSS-zen-garden/styles.css
+++ b/CSS-zen-garden/styles.css
@@ -8,24 +8,23 @@ body {
     font-family: 'Libre Baskerville', sans-serif;
     font-size: 70%;
 }
-
+.headContain {
+  height: 230px;
+  padding: 20px 0 70px 0;
+  background: #2d6360 50% 0 url(huntington.jpg) no-repeat;
+  background-attachment: fixed, fixed, fixed, scroll;
+  background-image: url(contours.png), url(noise.png), url(gridlines.png), url(huntington.jpg);
+  background-position: 0 0, 0 0, -5px -25px, 0 50%;
+  background-repeat: repeat, repeat, repeat, no-repeat;
+  background-size: auto, auto, auto, cover;
+  text-align: center;
+}
 
 
 /* HEADER TOP WRAP */
 @media only screen and (max-width: 1132px)
-header {
+.headContain {
     border-top: solid 10px rgba(19, 67, 71, 0.9);
-}
-
-@media only screen and (min-width: 1132px)
-header {
-    width: 100%;
-    height: 310px;
-    padding: 0 10%;
-    border-top: solid 12px rgba(19, 67, 71, 0.8);
-    box-shadow: inset 0 0 100px rgba(255, 255, 255, 0.3);
-    vertical-align: middle;
-    text-align: left;
 }
 
 /* HEADER CONTENT */
