--- a/CSS-zen-garden/styles.css
+++ b/CSS-zen-garden/styles.css
@@ -1,12 +1,20 @@
-html {
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+html, body {
 	margin: 0;
 	padding: 0;
 	}
 body { 
   color: #325050;
-    background: #fff;
-    font-family: 'Libre Baskerville', sans-serif;
-    font-size: 70%;
+  background: #fff;
+  font-family: 'Libre Baskerville', sans-serif;
+  font-size: 70%;
+}
+.siteWrap {
+  position: relative;
 }
 .headContain {
   height: 230px;
@@ -19,18 +27,42 @@ body {
   background-size: auto, auto, auto, cover;
   text-align: center;
 }
-
-
 /* HEADER TOP WRAP */
 @media only screen and (max-width: 500px) {
-    h1 {
+    h1::before {
         display: block;
         left: 50%;
         width: 50px;
         height: 50px;
         margin: 0 0 0 -25px;
-        padding: 0 0 35px 0;   
-        }
-    
+        padding: 0 0 35px 0;
+  }    
 }
-  
+@media only screen and (max-width: 500px) {
+    h1 {
+      margin: 0;
+  }
+}
+@media only screen and (max-width: 600px) {
+    h1 {
+      margin-top: 30px;
+      font-size: 2.5em;
+  }
+} 
+h1 {
+  padding: 3px;
+  display: block;
+  font-size: 2em;
+  margin-block-start: 0.67em;
+  margin-block-end: 0.67em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+  text-transform: uppercase;
+} 
+h1, h2 {
+  padding: 0 10%;
+  margin: 0;
+  color: #fff;
+  font-weight: normal;
+}
