--- a/CSS-zen-garden/styles.css
+++ b/CSS-zen-garden/styles.css
@@ -60,6 +60,15 @@ h1 {
   font-weight: bold;
   text-transform: uppercase;
 } 
+h2 {
+  display: block;
+  padding-top: 5px;
+  padding-bottom: 30px;
+  border-top: none;
+  color: rgba(255,255,255,0.6);
+  font-size: 1.6em;
+  font-style: italic;
+}
 h1, h2 {
   padding: 0 10%;
   margin: 0;
