--- a/CSS-zen-garden/styles.css
+++ b/CSS-zen-garden/styles.css
@@ -28,6 +28,59 @@ body {
   text-align: center;
 }
 /* HEADER TOP WRAP */
+
+h1 {
+  padding-top: 0;
+  padding-bottom: 5px;
+  border-bottom: none;
+  font-family: 'Julius Sans One', sans-serif;
+  font-size: 3.2em;
+  text-transform: uppercase;
+}
+h2 {
+  display: block;
+  padding-top: 5px;
+  padding-bottom: 30px;
+  border-top: none;
+  color: rgba(255,255,255,0.6);
+  font-size: 1.6em;
+  font-style: italic;
+}
+h1, h2 {
+  padding: 0 10%;
+  margin: 0;
+  color: #fff;
+  font-weight: normal;
+}
+
+h1::before {
+  display: inline-block;
+  position: relative;
+  top: 20px;
+  content: "";
+  width: 80px;
+  height: 80px;
+  margin: -20px 20px 0 0;
+  background: url(enso.svg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  opacity: 0.6;
+}
+
+@media not all, not all, (-webkit-min-device-pixel-ratio: 1.5), not all, (min-resolution: 1.5dppx) {
+  .headContain {
+    background-image: url(contours@2x.png), url(noise.png), url(gridlines.png), url(huntington.jpg);
+    background-size: 50% auto, auto, auto, cover;
+  }
+}
+
+
+
+@media only screen and (max-width: 320px) {
+  h1 {
+    font-size: 2em;
+  }
+}
 @media only screen and (max-width: 500px) {
     h1::before {
         display: block;
@@ -49,29 +102,3 @@ body {
       font-size: 2.5em;
   }
 } 
-h1 {
-  padding: 3px;
-  display: block;
-  font-size: 2em;
-  margin-block-start: 0.67em;
-  margin-block-end: 0.67em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-  font-weight: bold;
-  text-transform: uppercase;
-} 
-h2 {
-  display: block;
-  padding-top: 5px;
-  padding-bottom: 30px;
-  border-top: none;
-  color: rgba(255,255,255,0.6);
-  font-size: 1.6em;
-  font-style: italic;
-}
-h1, h2 {
-  padding: 0 10%;
-  margin: 0;
-  color: #fff;
-  font-weight: normal;
-}
