--- a/CSS-zen-garden/styles.css
+++ b/CSS-zen-garden/styles.css
@@ -7,7 +7,7 @@ html, body {
 	margin: 0;
 	padding: 0;
 	}
-body { 
+body {
   color: #325050;
   background: #fff;
   font-family: 'Libre Baskerville', sans-serif;
@@ -16,17 +16,7 @@ body {
 .siteWrap {
   position: relative;
 }
-.headContain {
-  height: 230px;
-  padding: 20px 0 70px 0;
-  background: #2d6360 50% 0 url(huntington.jpg) no-repeat;
-  background-attachment: fixed, fixed, fixed, scroll;
-  background-image: url(contours.png), url(noise.png), url(gridlines.png), url(huntington.jpg);
-  background-position: 0 0, 0 0, -5px -25px, 0 50%;
-  background-repeat: repeat, repeat, repeat, no-repeat;
-  background-size: auto, auto, auto, cover;
-  text-align: center;
-}
+
 /* HEADER TOP WRAP */
 
 h1 {
@@ -69,9 +59,34 @@ h1::before {
 
 @media not all, not all, (-webkit-min-device-pixel-ratio: 1.5), not all, (min-resolution: 1.5dppx) {
   .headContain {
-    background-image: url(contours@2x.png), url(noise.png), url(gridlines.png), url(huntington.jpg);
+    background-image: url(contours@2x.png), url(noise.png), url(gridlines.png), url(huntington-header.jpg);
     background-size: 50% auto, auto, auto, cover;
   }
+}
+
+@media only screen and (max-width: 1132px) {
+  .headContain {
+    border-top: solid 10px rgba(19, 67, 71, 0.9);
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .headContain {
+    height: 250px;
+    padding-top: 0;
+  }
+}
+
+.headContain {
+  height: 230px;
+  padding: 20px 0 70px 0;
+  background: #2d6360 50% 0 url(huntington-header.jpg) no-repeat;
+  background-attachment: fixed, fixed, fixed, scroll;
+  background-image: url(contours.png), url(noise.png), url(gridlines.png), url(huntington-header.jpg);
+  background-position: 0 0, 0 0, -5px -25px, 0 50%;
+  background-repeat: repeat, repeat, repeat, no-repeat;
+  background-size: auto, auto, auto, cover;
+  text-align: center;
 }
 
 
@@ -91,6 +106,8 @@ h1::before {
         padding: 0 0 35px 0;
   }    
 }
+
+
 @media only screen and (max-width: 500px) {
     h1 {
       margin: 0;
