--- a/CSS-zen-garden/styles.css
+++ b/CSS-zen-garden/styles.css
@@ -19,6 +19,39 @@ body {
 
 /* HEADER TOP WRAP */
 
+/* MEDIA QUERY */
+@media not all, not all, (-webkit-min-device-pixel-ratio: 1.5), not all, (min-resolution: 1.5dppx) {
+  .headContain {
+    background-image: url(contours@2x.png), url(noise.png), url(gridlines.png), url(huntington-header.jpg);
+    background-size: 50% auto, auto, auto, cover;
+  }
+}
+@media only screen and (max-width: 1132px) {
+  .headContain {
+    border-top: solid 10px rgba(19, 67, 71, 0.9);
+  }
+}
+@media only screen and (max-width: 500px) {
+  .headContain {
+    height: 250px;
+    padding-top: 0;
+  }
+}
+/* >>>>>>>>>>>>>>>>>>>>>>>>>>>> */
+.headContain {
+  height: 230px;
+  padding: 20px 0 70px 0;
+  background: #2d6360 50% 0 url(huntington-header.jpg) no-repeat;
+  background-attachment: fixed, fixed, fixed, scroll;
+  background-image: url(contours.png), url(noise.png), url(gridlines.png), url(huntington-header.jpg);
+  background-position: 0 0, 0 0, -5px -25px, 0 50%;
+  background-repeat: repeat, repeat, repeat, no-repeat;
+  background-size: auto, auto, auto, cover;
+  text-align: center;
+}
+
+/* H1 & H2 WITHIN .HEADCONTAIN */
+
 h1 {
   padding-top: 0;
   padding-bottom: 5px;
@@ -42,7 +75,6 @@ h1, h2 {
   color: #fff;
   font-weight: normal;
 }
-
 h1::before {
   display: inline-block;
   position: relative;
@@ -57,39 +89,7 @@ h1::before {
   opacity: 0.6;
 }
 
-@media not all, not all, (-webkit-min-device-pixel-ratio: 1.5), not all, (min-resolution: 1.5dppx) {
-  .headContain {
-    background-image: url(contours@2x.png), url(noise.png), url(gridlines.png), url(huntington-header.jpg);
-    background-size: 50% auto, auto, auto, cover;
-  }
-}
-
-@media only screen and (max-width: 1132px) {
-  .headContain {
-    border-top: solid 10px rgba(19, 67, 71, 0.9);
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  .headContain {
-    height: 250px;
-    padding-top: 0;
-  }
-}
-
-.headContain {
-  height: 230px;
-  padding: 20px 0 70px 0;
-  background: #2d6360 50% 0 url(huntington-header.jpg) no-repeat;
-  background-attachment: fixed, fixed, fixed, scroll;
-  background-image: url(contours.png), url(noise.png), url(gridlines.png), url(huntington-header.jpg);
-  background-position: 0 0, 0 0, -5px -25px, 0 50%;
-  background-repeat: repeat, repeat, repeat, no-repeat;
-  background-size: auto, auto, auto, cover;
-  text-align: center;
-}
-
-
+/* MEDIA QUERY H1 & (H2 EVENTUALLY) WITHIN .HEADCONTAIN */
 
 @media only screen and (max-width: 320px) {
   h1 {
@@ -106,8 +106,6 @@ h1::before {
         padding: 0 0 35px 0;
   }    
 }
-
-
 @media only screen and (max-width: 500px) {
     h1 {
       margin: 0;
@@ -118,4 +116,9 @@ h1::before {
       margin-top: 30px;
       font-size: 2.5em;
   }
-} 
+}
+
+/* NAV BAR  */
+nav {
+  display: block;
+}
