--- a/CSS-Zen-Garden-2/styles.css
+++ b/CSS-Zen-Garden-2/styles.css
@@ -1,8 +1,64 @@
+* {
+  box-sizing: border-box;
+}
 body {
-  background: url(http://www.csszengarden.com/214/huntington.jpg);
+  color: #325050;
+  background: #fff;
+  font-family: 'Libre Baskerville', sans-serif;
+  font-size: 70%;
+}
+html, body {
+  padding: 0;
+  margin: 0;
+}
+#wrap {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 260px 4fr 115px 1fr;
+}
+.topContent {
+  margin-top: 20px;
+}
+header {
+  background: #2d6360 50% 0 url(http://www.csszengarden.com/214/huntington.jpg) no-repeat;
+  background-attachment: fixed, fixed, fixed, scroll;
+  border-top: solid 10px rgba(19, 67, 71, 0.9);
+  background-position: 0 0, 0 0, -5px -25px, 0 50%;
+  background-repeat: repeat, repeat, repeat, no-repeat;
+  background-image: url(http://www.csszengarden.com/214/contours.png), url(http://www.csszengarden.com/214/noise.png), url(http://www.csszengarden.com/214/gridlines.png), url(http://www.csszengarden.com/214/huntington.jpg);
+  background-size: 50% auto, auto, auto, cover; 
+  height: 250px;
+  text-align: center;
+}
+#topLogo {
+  display: inline-block;
+  position: relative;
+  /* top: 20px; */
+  content: "";
+  width: 50px;
+  height: 50px;
+  /* margin: -20px 20px 0 0; */
+  background-repeat: no-repeat;
+  background-size: 100%;
+  opacity: 0.6;
+}
+h1, h2 {
+  padding: 0 10%;
+  margin: 0;
+  color: #fff;
+  font-weight: normal;
 }
 h1 {
+  margin-top: 12px;
+  padding: 0 0 35px 0;
+  /* margin: 0; */
+  padding-top: 0;
+  padding-bottom: 5px;
+  border-bottom: none;
   font-family: 'Julius Sans One', sans-serif;
+  text-transform: uppercase;
+  font-size: 2.5em;
+  color: whitesmoke;
 }
 h2 {
   display: block;
@@ -13,3 +69,22 @@ h2 {
   font-size: 1.6em;
   font-style: italic;
 }
+.leftContent {
+  margin: 0 auto;
+  width: 80%;
+  padding-top: 2em;
+}
+p {
+  margin: 0.75em 0;
+  line-height: 2;
+  font-size: 1.2em;
+}
+h3 {
+  margin: 2em 0 0 0;
+  color: #2e484c;
+  font-family: 'Julius Sans One', sans-serif;
+  font-size: 1.8em;
+  font-weight: normal;
+  text-transform: uppercase;
+}
+
