--- a/CSS-Zen-Garden-2/styles.css
+++ b/CSS-Zen-Garden-2/styles.css
@@ -31,8 +31,9 @@ html, body {
   "n";
 }
 nav {
+  background-color: #f5f5f533;
   grid-area: n;
-  font-size: 
+  height: 70px;
 }
 ul {
   height: 74px;
@@ -46,12 +47,15 @@ ul {
 
 }
 li.viewAll a {
+  height: 70px;
+  color: rgba(255, 255, 255, 0.65);
   display: block;
   margin-bottom: 0.25em;
   font-family: 'Julius Sans One', sans-serif;
   font-size: 1.2em;
   font-style: normal;
   text-transform: uppercase;
+  text-decoration: none;
 }
 .next {
   grid-area: next;
@@ -60,6 +64,7 @@ li.viewAll a {
   grid-area: prev;
 }
 .viewAll {
+  margin-top: 25px;
   align-self: center;
   font-size: 14px;
   grid-area: va;
@@ -76,6 +81,7 @@ header {
   text-align: center;
 }
 #topLogo {
+  margin-top: 16px;
   align-self: flex-end;
   justify-self: center;
   grid-area: tl;
@@ -122,10 +128,11 @@ h2 {
 .leftContent {
   grid-area: lc;
   margin: 0 auto;
-  width: 80%;
+  width: 100%;
   padding-top: 2em;
 }
 p {
+  width: 80%;
   margin: 0.75em 0;
   line-height: 2;
   font-size: 1.2em;
@@ -138,6 +145,22 @@ h3 {
   font-weight: normal;
   text-transform: uppercase;
 }
+p h3 {
+  padding-left: 30px;
+}
 .rightContent {
   grid-area: rc;
+}
+.leftContent {
+  padding: 3em 0;
+  margin-top: 3em;
+}
+div#leftBamboo {
+}
+#leftBamboo {
+  background-attachment: scroll, scroll, fixed;
+  background-color: rgba(138,188,159,0.5);
+  background-image: url(http://www.csszengarden.com/214/contours-opaque.png), url(http://www.csszengarden.com/214/gridlines-opaque.png), url(http://www.csszengarden.com/214/bamboo.png);
+  background-repeat: repeat, repeat, no-repeat;
+  background-size: auto, auto, cover;
 }
