--- a/CSS-Zen-Garden-2/styles.css
+++ b/CSS-Zen-Garden-2/styles.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
 }
+/* INHERIT BASE */
 body {
   color: #325050;
   background: #fff;
@@ -19,6 +20,7 @@ html, body {
   "tc"
   "lc"; */
 }
+/* HEAD TOP SECTION */
 .topContent {
   height: 240px;
   display: grid;
@@ -28,23 +30,35 @@ html, body {
   "tl"
   "h1"
   "h2"
+  "db";
+}
+.designBank {
+  display: grid;
+  grid-area: db;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: 
   "n";
 }
 nav {
+  display: grid;
   background-color: #f5f5f533;
   grid-area: n;
   height: 70px;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: 
+  "ul";
 }
 ul {
   height: 74px;
   padding: 0;
   margin: 0;
   display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-columns: 1fr 2fr 1fr;
   grid-template-rows: 1fr;
   grid-template-areas: 
-  "prev va next"
-
+  "prev va next";
 }
 li.viewAll a {
   height: 70px;
@@ -59,6 +73,7 @@ li.viewAll a {
 }
 .next {
   grid-area: next;
+  content: ">";
 }
 .previous {
   grid-area: prev;
@@ -81,27 +96,23 @@ header {
   text-align: center;
 }
 #topLogo {
-  margin-top: 16px;
+  margin-top: 22px;
   align-self: flex-end;
   justify-self: center;
   grid-area: tl;
   display: inline-block;
   position: relative;
-  /* top: 20px; */
   content: "";
   width: 50px;
-  height: 50px;
-  /* margin: -20px 20px 0 0; */
+  height: 52px;
   background-repeat: no-repeat;
   background-size: 100%;
   opacity: 0.6;
 }
 h1, h2 {
-  align-self: top;
   justify-self: center;
   padding: 0 10%;
   margin: 0;
-  color: #fff;
   font-weight: normal;
 }
 h1 {
@@ -119,11 +130,15 @@ h1 {
 h2 {
   display: block;
   padding-top: 5px;
-  padding-bottom: 30px;
+  padding-bottom: 22px;
   border-top: none;
   color: rgba(255,255,255,0.6);
   font-size: 1.6em;
   font-style: italic;
+}
+/* LEFT / MAIN CONTENT---- NEED TO SNAP exampleLinkP  */
+#exampleLinkP {
+  
 }
 .leftContent {
   grid-area: lc;
@@ -132,28 +147,21 @@ h2 {
   padding-top: 2em;
 }
 p {
+  padding-left: 30px;
   width: 80%;
-  margin: 0.75em 0;
+  margin: 0px;
   line-height: 2;
   font-size: 1.2em;
 }
 h3 {
-  margin: 2em 0 0 0;
+  padding-left: 30px;
+  margin: 0px;
+  width: 80%;
   color: #2e484c;
   font-family: 'Julius Sans One', sans-serif;
   font-size: 1.8em;
   font-weight: normal;
   text-transform: uppercase;
-}
-p h3 {
-  padding-left: 30px;
-}
-.rightContent {
-  grid-area: rc;
-}
-.leftContent {
-  padding: 3em 0;
-  margin-top: 3em;
 }
 div#leftBamboo {
 }
@@ -163,4 +171,8 @@ div#leftBamboo {
   background-image: url(http://www.csszengarden.com/214/contours-opaque.png), url(http://www.csszengarden.com/214/gridlines-opaque.png), url(http://www.csszengarden.com/214/bamboo.png);
   background-repeat: repeat, repeat, no-repeat;
   background-size: auto, auto, cover;
+}
+/* RIGHT / BOTTOM --- NEED MEDIA SNAP** */
+.rightContent {
+  grid-area: rc;
 }
