--- a/CSS-Zen-Garden-2/styles.css
+++ b/CSS-Zen-Garden-2/styles.css
@@ -21,69 +21,6 @@ html, body {
   "lc"; */
 }
 /* HEAD TOP SECTION */
-.topContent {
-  height: 240px;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
-  grid-template-areas: 
-  "tl"
-  "h1"
-  "h2"
-  "db";
-}
-.designBank {
-  display: grid;
-  grid-area: db;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
-  grid-template-areas: 
-  "n";
-}
-nav {
-  display: grid;
-  background-color: #f5f5f533;
-  grid-area: n;
-  height: 70px;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
-  grid-template-areas: 
-  "ul";
-}
-ul {
-  height: 74px;
-  padding: 0;
-  margin: 0;
-  display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
-  grid-template-rows: 1fr;
-  grid-template-areas: 
-  "prev va next";
-}
-li.viewAll a {
-  height: 70px;
-  color: rgba(255, 255, 255, 0.65);
-  display: block;
-  margin-bottom: 0.25em;
-  font-family: 'Julius Sans One', sans-serif;
-  font-size: 1.2em;
-  font-style: normal;
-  text-transform: uppercase;
-  text-decoration: none;
-}
-.next {
-  grid-area: next;
-  content: ">";
-}
-.previous {
-  grid-area: prev;
-}
-.viewAll {
-  margin-top: 25px;
-  align-self: center;
-  font-size: 14px;
-  grid-area: va;
-}
 header {
   background: #2d6360 50% 0 url(http://www.csszengarden.com/214/huntington.jpg) no-repeat;
   background-attachment: fixed, fixed, fixed, scroll;
@@ -136,6 +73,89 @@ h2 {
   font-size: 1.6em;
   font-style: italic;
 }
+.topContent {
+  height: 240px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-areas: 
+  "tl"
+  "h1"
+  "h2"
+  "db";
+}
+.designBank {
+  display: grid;
+  background: rgba(255,255,255,0.2);
+  grid-area: db;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: 
+  "n";
+}
+/* .designBank .previous a, .designBank .next a { */
+  /* display: block;
+  overflow: hidden;
+  width: 70px;
+  height: 70px;
+  text-indent: 100%;
+  text-decoration: none;
+  white-space: nowrap;
+} */
+nav {
+  display: grid;
+  grid-area: n;
+  height: 70px;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: 
+  "ul";
+}
+ul {
+  height: 74px;
+  padding: 0;
+  margin: 0;
+  display: grid;
+  grid-area: ul;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: 
+  "prev va next";
+}
+li.viewAll a {
+  height: 70px;
+  color: rgba(255, 255, 255, 0.65);
+  display: block;
+  font-family: 'Julius Sans One', sans-serif;
+  font-size: 1.2em;
+  font-style: normal;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+a {
+  transition: all 0.25s ease-out;
+}
+a:hover 
+{
+  cursor: pointer;
+}
+.previous, .next {
+  left: 0;
+  z-index: 3;
+}
+.next {
+  grid-area: next;
+  content: ">";
+}
+.previous {
+  grid-area: prev;
+}
+.viewAll {
+  line-height: 50px;
+  align-self: center;
+  font-size: 14px;
+  grid-area: va;
+}
 /* LEFT / MAIN CONTENT---- NEED TO SNAP exampleLinkP  */
 #exampleLinkP {
   
@@ -143,20 +163,21 @@ h2 {
 .leftContent {
   grid-area: lc;
   margin: 0 auto;
-  width: 100%;
+  width: 80%;
   padding-top: 2em;
 }
+.left {
+
+}
 p {
-  padding-left: 30px;
-  width: 80%;
-  margin: 0px;
+  margin: 0.75em 0;
   line-height: 2;
+}
+p, li {
   font-size: 1.2em;
 }
 h3 {
-  padding-left: 30px;
-  margin: 0px;
-  width: 80%;
+  margin: 2em 0 0 0;
   color: #2e484c;
   font-family: 'Julius Sans One', sans-serif;
   font-size: 1.8em;
