--- a/bresenhams-algorithm/styles.css
+++ b/bresenhams-algorithm/styles.css
@@ -15,9 +15,10 @@ table {
 
 th, td {
   border: 1px solid black;
-  background-color: whitesmoke;
-  transition: background-color 0.8s ease;
+  background-color: rgb(221, 220, 220);
+  transition: background-color 0.6s ease;
 }
+
 td:hover {
   background-color: black;
 }
@@ -28,8 +29,8 @@ td:hover {
 }
 #black:hover {
   background-color: white;
-
 }
+
 #blue {
   transition: background-color 0.5s ease;
   background-color: #030FFB;
@@ -45,6 +46,7 @@ td:hover {
 #yellow:hover {
   background-color: #030FFB;
 }
+
 #green {
   transition: background-color 0.5s ease;
   background-color: #00AF23;
