--- a/vacation-spots-using-props-and-map/vacation/src/App.css
+++ b/vacation-spots-using-props-and-map/vacation/src/App.css
@@ -25,11 +25,18 @@ h1 {
 
 #cardWrap {
   width: 80%;
-  margin: 20px;
+  margin: auto;
   padding: 20px;
   background-color: rgba(127, 128, 255, .3);
+  border-radius: 3px;
+}
+#cardWrap:hover {
+  shadow: ;
 }
 
 #siteWrap {
 }
 
+
+
+raises money for restoration at fairgrounds   Momma voted on the board of heritage foundation
