created JSON for Vacation-Spots

--- a/vacation-spots-using-props-and-map/vacation/src/App.css
+++ b/vacation-spots-using-props-and-map/vacation/src/App.css
@@ -49,9 +49,9 @@ h1 {
   transition: z-index 2s ease-in-out;
 }
 
-.cardWrap img:hover {
+/* .cardWrap img:hover {
   z-index: -1;
-}
+} */
 
 img {
   
