--- a/design-a-blog/styles.css
+++ b/design-a-blog/styles.css
@@ -1,4 +1,5 @@
 body {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   margin: 0;
   width: 100vw;
   height: 100vh;
@@ -6,29 +7,96 @@ body {
 }
 
 .siteWrap {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(252, 252, 248, 0.2);
   text-align: center;
   display: grid;
-  grid-template-rows: 1fr 3fr 4fr 1fr 2fr;
+  grid-template-rows: 1fr 3fr 4fr 1fr 1fr;
   grid-template: 
     "n"
     "h"
     "m"
+    "vm"
     "f";
 }
 
-nav {
+.navTab {
+  width: 100vw;
+  height: 93px;
   grid-area: n;
-  position: fixed;
+  background-color: rgba(127, 128, 255, .3);
+}
+
+.navButtons {
+  font-size: 20px;
+  padding: 16px;
+  margin: 2px;
+  margin-top: 14px;
+  transition: background-color .5s ease-in-out, box-shadow .25s ease-in-out;
+  background-color: rgba(127, 128, 255, .3);
+  border-radius: 3px;
+}
+
+.navButtons:hover {
+  cursor: pointer;
+  box-shadow: 10px 14px 7px -5px black;  
+  background-color: rgba(255, 254, 127, .2);
 }
 
 header {
   grid-area: h;
 }
 
+.titleHeader {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
 main {
   grid-area: m;
+  text-align: center;
 }
+
+.clickBlog {
+  margin: 22px;
+  height: auto;
+  width: 290px;
+  text-shadow: 0px 0px 10px black;
+  color: lavenderblush;
+  transition: box-shadow .25s ease-in-out;
+  border-radius: 3px;
+  font-size: 20px;
+}
+
+.clickBlog:hover {
+  cursor: pointer;
+  box-shadow: 10px 14px 7px -5px black;
+  background-color: rgba(255, 254, 127, .2);
+}
+
+.viewMore {
+  margin: auto;
+  width: 103px;
+  font-size: 16px;
+  background-color: green;
+  border-radius: 20px;
+  grid-area: vm;
+  color: whitesmoke;
+  align-items: center;
+  transition: background-color .25s ease-in-out, box-shadow .25s ease-in-out;
+}
+
+.viewMore:hover {
+  cursor: pointer;
+  box-shadow: 10px 14px 7px -5px black;
+  background-color: orangered;
+} 
 
 footer {
   grid-area: f;
 }
+
+
+  
+
+  
