--- a/design-a-blog/styles.css
+++ b/design-a-blog/styles.css
@@ -22,26 +22,30 @@ body {
 }
 
 .navTab {
-  width: 100vw;
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+  width: 100%;
   height: 93px;
   grid-area: n;
-  background-color: rgba(127, 128, 255, .3);
+  background-color: rgba(158, 158, 158, 0.507);
 }
 
 .navButtons {
-  font-size: 20px;
-  padding: 16px;
-  margin: 2px;
-  margin-top: 14px;
+  outline: 1px black;
+  font-size: 22px;
+  width: 25%;
+  padding: 2px;
+  margin: 12px;
   transition: background-color .5s ease-in-out, box-shadow .25s ease-in-out;
-  background-color: rgba(127, 128, 255, .3);
-  border-radius: 3px;
+  background-color: rgba(247, 147, 33, 0.856);
+  border-radius: 2px;
 }
 
 .navButtons:hover {
   cursor: pointer;
-  box-shadow: 10px 14px 7px -5px black;  
-  background-color: rgba(255, 254, 127, .2);
+  box-shadow: 6px 10px 7px -5px black;  
+  background-color: rgba(245, 60, 3, 0.911);
 }
 
 header {
@@ -49,7 +53,9 @@ header {
 }
 
 .titleHeader {
+  font-size: 44px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  text-shadow: 0px 0px 5px rgb(255, 4, 4);
 }
 
 .introPar {
