--- a/vacation-spots-using-props-and-map/vacation/src/App.css
+++ b/vacation-spots-using-props-and-map/vacation/src/App.css
@@ -32,7 +32,7 @@ h1 {
   margin: auto;
   margin-top: 50px;
   padding: 20px;
-  transition: background-color .5s ease-in-out, box-shadow .25s ease-in-out;
+  transition: background-color .25s ease-in-out, box-shadow .25s ease-in-out;
   /* transition: box-shadow .25s ease-in-out; */
   background-color: rgba(127, 128, 255, .3);
   box-shadow: 10px 10px 5px 5px #888888;
@@ -41,7 +41,7 @@ h1 {
 .cardWrap:hover {
   cursor: pointer;
   box-shadow: 0px 0px 0px 0px;
-  background-color: rgba(255, 254, 127, .2)
+  background-color: rgba(255, 255, 127, 0.075)
 }
 
 .cardWrap img {
@@ -57,12 +57,16 @@ img {
   
 }
 #budget {
+  width: auto;
+  font-weight: bolder;
+  font-size: 28px;
   color: green;
 }
 
 #budget:hover {
+  font-size: 32px;
   cursor: auto;
-  color: orange;
+  color: rgb(255, 102, 0);
 }
 
 
